--- a/recipe/meta.yaml
+++ b/recipe/meta.yaml
@@ -6,7 +6,7 @@ package:
 
 source:
   fn: libmng-{{ version }}.tar.xz
-  url: http://sourceforge.net/projects/libmng/files/libmng-devel/{{ version }}/libmng-{{ version }}.tar.xz/download
+  url: http://sourceforge.net/projects/libmng/files/libmng-devel/{{ version }}/libmng-{{ version }}.tar.xz/download?use_mirror=iweb
   sha256: 4a462fdd48d4bc82c1d7a21106c8a18b62f8cc0042454323058e6da0dbb57dd3
 
 build:
